@@ -1,6 +1,8 @@
 use strict;
 use warnings;
 use inc::Module::Install 0.91;
+use Module::Install::AuthorRequires;
+use Module::Install::AuthorTests;
 
 name 'Catalyst-Plugin-Static-Simple';
 all_from 'lib/Catalyst/Plugin/Static/Simple.pm';
@@ -10,6 +12,14 @@ requires 'MIME::Types' => '1.25';
 requires 'Test::More';
 requires 'Moose';
 requires 'namespace::autoclean';
+
+test_requires 'Test::More';
+
+author_requires 'Test::NoTabs';
+author_requires 'Test::Pod' => '1.14';
+author_requires 'Test::Pod::Coverage' => '1.04';
+
+author_tests 't/author';
 
 if( can_use 'Catalyst::Plugin::SubRequest' ) {
     unless( can_use 'Catalyst::Plugin::SubRequest' => '0.08' ) {
