@@ -1,0 +1,7 @@
+use strict;
+use warnings;
+use Test::More;
+use Test::NoTabs;
+
+all_perl_files_ok(qw/lib/);
+
