@@ -3,6 +3,9 @@ Revision history for Perl extension Catalyst::Plugin::Static::Simple
         - Switch to being a Moose role, removing dependencies on
           Class::Data::Inheritable and Class::Accessor (Andrey Kostenko in
           RT#51089)
+        - Make Pod tests mandatory for authors but never run otherwise
+        - Switch to Test::NoTabs to ensure no tabs, rather than
+          Test::Perl::Critic
 
 0.26   2009-12-06 12:30:00
         - Fix Pod to show less nasty method of assigning config by calling
